added a posibility to check ETH balance on address before sending

--- a/Task2/solution/index.html
+++ b/Task2/solution/index.html
@@ -10,9 +10,11 @@
 
 <body>
     <h1>GOERLI ETH TRANSFER</h1>
-    <h2>Private key</h2>
+    <h2>Address private key</h2>
     <input type="text" id ="privateKey"  placeholder="Enter your private key here" size=80>
-    <h2>Transfer to address</h2>
+    <button id = "checkBalanceButton">Check balance</button>
+    <h3 id="balanceText"></h3>
+    <h2>Reciever address</h2>
     <input type="text" id="transferToAddress" placeholder="Enter transfer to address here" size=80>
     <h2>Amount in ETH</h2>
     <input type="text" id="amountInEth" placeholder="Amount here" size="40">
